2010-01-10  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/test-twittering-mode.el (test-status-not-blank-p): add a
	testcase reproducing the bug of twittering-status-not-blank-p.

	* twittering-mode.el (twittering-use-native-retweet): renamed from
	twittering-use-native-retweets
	(twittering-status-not-blank-p): bug fix: return nil if a status
	is ended by '@foo'.

2010-01-09  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-status-to-status-datum): Change
	retweet related variables to local scope from global one.

	* twittering-mode.el (twittering-extract-timeline-spec): Change
	syntax of error message to fit the GNU Emacs Lisp convention.
	(twittering-timeline-spec-to-host-method): Likewise.
	(twittering-get-and-render-timeline): Likewise.

	* twittering-mode.el (twittering-extract-timeline-spec): Remove an
	unnecessary call to `format' because all arguments of `error' pass
	to `format'.
	(twittering-timeline-spec-to-host-method): Likewise.
	(twittering-get-and-render-timeline): Likewise.

	* twittering-mode.el (twittering-read-username-with-completion):
	Convert a list of username strings to an alist before calling
	`completing-read' to work on Emacs21; same as
	`twittering-read-timeline-spec-with-completion'.

	* twittering-mode.el (twittering-icon-path): Delete function.

2010-01-09  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-http-get-list-index-sentinel):
	`save-excursion' had no effect because of the following
	`set-buffer'. This is fixed so that `save-excursion' saves the
	state of `temp-buffer'.
	(twittering-get-response-header): Likewise.
	(twittering-get-response-body): Likewise.
	(twittering-tinyurl-get): Likewise.
	(twittering-tinyurl-get): `buffer' are killed even if
	`search-forward-regexp' fails.

2010-01-08  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-percent-encode): bug fix:
	'\n','\r','\t' were not encoded correctly.
